# coverage-test

./: coverage-test.cabal
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
