name:                coverage-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bitonic/coverage-test#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2016 FP Complete Corporation
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -fprof-auto -fhpc

executable coverage-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto -fhpc
  build-depends:       base
                     , coverage-test
  default-language:    Haskell2010

test-suite coverage-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , coverage-test
                     , process
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto -fhpc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bitonic/coverage-test
